load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "action_env_test",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
